--- a/functions/package.json
+++ b/functions/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "firebase-auth0-nodeserver",
+  "name": "gama-academy-assignment-3",
   "version": "0.1.0",
-  "description": "Node.js server that authenticates with an Auth0 access token and returns a Firebase auth token.",
-  "repository": "https://github.com/auth0-blog/firebase-auth0-nodeserver",
   "main": "server.js",
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "lint": "nodec lint"
   },
-  "author": "Kim Maida for Auth0",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
