--- a/site/.firebaserc
+++ b/site/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "hustler-s-league"
+    "default": "hustler-s-league",
+    "prod": "hustler-s-league-dev"
   }
 }
