--- a/mvp/client/package.json
+++ b/mvp/client/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@angular-devkit/core": "^0.3.2",
     "@angular-devkit/schematics": "^0.3.2",
-    "@angular/cli": "1.7.3",
+    "@angular/cli": "^1.6.8",
     "@angular/compiler-cli": "5.2.9",
     "@angular/language-service": "5.2.9",
     "@types/jasmine": "~2.5.53",
